upgrade css, add timer

--- a/index.html
+++ b/index.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width">
-	<meta name="description" content="Can you achieve the Iron Throne or are you destined to join the Night's Watch along the Wall?">
-    <title>GOT Quiz App</title>
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Cinzel|Montserrat" rel="stylesheet">
-    <!-- css -->
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	 crossorigin="anonymous">
-	</script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="description" content="Can you achieve the Iron Throne or are you destined to join the Night's Watch along the Wall?">
+  <title>GOT Quiz App</title>
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Cinzel|Montserrat" rel="stylesheet">
+  <!-- css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link href="styles.css" rel="stylesheet" type="text/css" />
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+  </script>
 </head>
+
 <body>
-    <header><!--by default the same as role="banner"-->
-        <div class="logo">
-            <img src="http://pluspng.com/img-png/file-logo-game-of-thrones-png-1500.png" alt="game of thrones logo">
-        </div>
-        <div class="stats hidden">
-            <ul>
-                <li>Question: <span class="js-question-number">0</span>/10</li>
-                <li>Score: <span class="js-score">0</span></li>
-            </ul>
-        </div>
+  <header role="banner">
+    <div class="logo">
+      <img src="http://pluspng.com/img-png/file-logo-game-of-thrones-png-1500.png" alt="game of thrones logo">
+    </div>
+    <div class="stats hidden">
+      <ul>
+        <li>Question: <span class="js-question-number">0</span>/10</li>
+        <li>Score: <span class="js-score">0</span></li>
+        <li>Time: <span class="timer">2:00</span></li>
+      </ul>
+    </div>
+  </header>
+  <main role="main">
+    <header class="js-start-window container">
+      <h1>Winter is coming</h1>
+      <p>Hurry up, complete the quiz</p>
+      <button type="button" class="js-start-btn btn btn-1">Start Quiz</button>
     </header>
-    <main role="main">
-        <div class="js-start-window container">
-            <h1>Winter is coming</h1>
-            <p>Hurry up, complete the quiz</p>
-            <button type="button" class="js-start-btn btn btn-1">Start Quiz</button>
-        </div>
-        <div class="js-question-window container">
-        </div>
-    </main>
-        
-    <script src="data.js"></script>
-    <script src="script.js"></script>
+    <section class="js-question-window container">
+    </section>
+  </main>
+
+  <script src="data.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
